Refactor bidding process and enhance bid creation flow
- Updated CreateBidView to enforce minimum total bid price based on item prices and quantities.
- Modified routing to include itemId in the CreateBidView.
- Added notification for store owners attempting to bid on their own shop, redirecting them to the bids page.
- Simplified user authentication checks and improved error handling in CreateBidView.
- Removed unnecessary create bid button from EditShopView and adjusted layout accordingly.
- Updated ShopView to navigate to CreateBidView with specific itemId.
- Enhanced ShoppingCartView to display finished bids and their details, including payment options.
- Refactored PurchaseService to streamline bidding logic and added support for distinguishing between user bids and shop owner bids.
- Introduced new methods in PurchaseService for fetching finished bids and improved bid finalization logic.
- Updated PurchaseController to handle new bid-related endpoints and improved response handling.
- Adjusted tests to reflect changes in bidding logic and controller methods.

In short,  i finished bid section - *Fuck* Iran!